[gd_scene load_steps=6 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/PlanetInfoUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Sprite.gd" type="Script" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 1 )
speed = 20.0

[node name="SysOrigin" type="Position2D" parent="."]
position = Vector2( 600, 800 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="UI"]
margin_top = 39.0
margin_right = 300.0
margin_bottom = 238.0
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NumPlanets" type="HBoxContainer" parent="UI/TabContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 139.0
size_flags_vertical = 3

[node name="lblNumPlanets" type="Label" parent="UI/TabContainer/VBoxContainer/NumPlanets"]
margin_top = 62.0
margin_right = 119.0
margin_bottom = 76.0
text = "Number of Planets"

[node name="niNumPlanets" type="TextEdit" parent="UI/TabContainer/VBoxContainer/NumPlanets"]
margin_left = 123.0
margin_right = 292.0
margin_bottom = 139.0
size_flags_horizontal = 3

[node name="GenerateSystem" type="Button" parent="UI/TabContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 292.0
margin_bottom = 163.0
text = "Generate"

[node name="PlanetInfoUI" parent="UI" instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 746.324, 102.196 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
[connection signal="pressed" from="UI/TabContainer/VBoxContainer/GenerateSystem" to="." method="_on_GenerateSystem_pressed"]
